--- a/Rocketseat project/index.html
+++ b/Rocketseat project/index.html
@@ -67,7 +67,7 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="./assets/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
