--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     target="_blank">TCC - Pobreza Menstrual</a>
             </li>
             <li>
-                <a href="#" target="_blank">Portfólio</a>
+                <a href="#" target="_blank">Portfólio - Ainda não disponivel</a>
             </li>
             <li>
                 <a href="mailto:myllenasferreira@outlook.com.br" target="_blank">Me envie um E-mail</a>
